test_regress/t/t_class_param_subtype_bad_paren.out
%Error: t/t_class_param_subtype.v:32:5: Reference to parameterized class without #() (IEEE 1800-2023 8.25.1)
                                      : ... Suggest use 'CParam#()'
   32 |     CParam::type_t val_0 = 100;
      |     ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
